loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:3: error: Invalid literal number
for (i<-0to 28){
        ^LoopCourseForest:3: error: illegal start of simple expression
for (i<-0to 28){
        ^LoopCourseForest:26: error: ')' expected but '}' found.
	}
        ^